--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -21,7 +21,7 @@
 <% end %>
 
 <% if user_signed_in? %>
-  <%= render 'list_admin' %>
+  <%= render 'list_admin', published_matches: @published_matches, draft_matches: @draft_matches %>
 <% else %>
-  <%= render 'list_public' %>
+  <%= render 'list_public', matches: @published_matches %>
 <% end %>
