--- a/app/views/rounds/show.html.erb
+++ b/app/views/rounds/show.html.erb
@@ -28,32 +28,9 @@
 
 <hr>
 <p class="lead">Zápasy v tomto kole</p>
-<div class="row">
-  <div class="col">
-    <ul class="nav nav-tabs" id="tab-matches" role="tablist">
-      <li class="nav-item">
-        <a class="nav-link active" id="finished-tab" data-toggle="tab" href="#finished" role="tab" aria-controls="finished" aria-selected="true">Odohraté</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" id="pending-tab" data-toggle="tab" href="#pending" role="tab" aria-controls="pending" aria-selected="false">Naplánované</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" id="draft-tab" data-toggle="tab" href="#draft" role="tab" aria-controls="draft" aria-selected="false">Nezverejnené</a>
-      </li>
-    </ul>
-    <div class="tab-content" id="tab-matches-content">
-      <div class="tab-pane fade show active" id="finished" role="tabpanel" aria-labelledby="finished-tab">
-        <%= render 'matches/table', matches: @round.matches.finished.includes(:player1, :player2) %>
-      </div>
-      <div class="tab-pane fade" id="pending" role="tabpanel" aria-labelledby="pending-tab">
-        <%= render 'matches/table', matches: @round.matches.pending.includes(:player1, :player2) %>
-      </div>
-      <div class="tab-pane fade" id="draft" role="tabpanel" aria-labelledby="draft-tab">
-        <%= render 'matches/table', matches: @round.matches.draft.includes(:player1, :player2) %>
-      </div>
-    </div>
-  </div>
-</div>
+<%= render 'matches/list_admin',
+    published_matches: @round.matches.published.includes(:player1, :player2),
+    draft_matches: @round.matches.draft.includes(:player1, :player2) %>
 
 <hr>
 <% if @players_without_match.any? %>
