--- a/app/views/matches/_list_admin.html.erb
+++ b/app/views/matches/_list_admin.html.erb
@@ -2,10 +2,14 @@
   <div class="col">
     <ul class="nav nav-tabs" id="tab-matches" role="tablist">
       <li class="nav-item">
-        <a class="nav-link active" id="published-tab" data-toggle="tab" href="#published" role="tab" aria-controls="published" aria-selected="true">Zverejnené</a>
+        <a class="nav-link active" id="published-tab" data-toggle="tab" href="#published" role="tab" aria-controls="published" aria-selected="true">
+          Zverejnené <span class="badge badge-light"><%= published_matches.size %></span>
+        </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" id="draft-tab" data-toggle="tab" href="#draft" role="tab" aria-controls="draft" aria-selected="false">Nezverejnené</a>
+        <a class="nav-link" id="draft-tab" data-toggle="tab" href="#draft" role="tab" aria-controls="draft" aria-selected="false">
+          Nezverejnené <span class="badge badge-light"><%= draft_matches.size %></span>
+        </a>
       </li>
     </ul>
     <div class="tab-content" id="tab-matches-content">
