--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -10,7 +10,7 @@
   sa sami telefonicky dohodnete.
 </p>
 <p class="text-justify">
-  Zápasy sa budú hrať na 2 víťazné sety, pri skóre 1:1 na sety je 3.set supertiebreak do 10.
+  Hrá sa na 2 víťazné sety, pri skóre 1:1 na sety je 3.set supertiebreak do 10.
   Hráči sa pred zápasom môžu dohodnúť, že 3.set odohrajú klasickým spôsobom.
 </p>
 <p class="text-justify">
@@ -24,7 +24,7 @@
 <p class="text-justify">
   Hráč napísaný ako prvý si vyberie na ktorých kurtoch sa bude hrať a zaplatí kurt.
   Hráč napísaný ako druhý donesie na zápas nové loptičky. Každý hráč bude približne rovnaký počet
-  zápasov napísaný ako prvý a druhý.
+  zápasov napísaný ako prvý a druhý. Oficiálnymi loptami súťaže sú DUNLOP FORT, WILSON AO, HEAD ATP. Iné lopty možno použiť len so súhlasom súpera.
 </p>
 <p class="text-justify">
   Po skončení základnej časti súťaže bude nasledovať finálový víkend 14.-15. septembra,
