--- a/app/views/matches/_table.html.erb
+++ b/app/views/matches/_table.html.erb
@@ -1,4 +1,7 @@
 <% if matches.present? && matches.any? %>
+  <% if @last_update_time.present? %>
+    <i><small>(aktualizácia: <%= I18n.localize(@last_update_time, format: :date_with_time) %>)</small></i>
+  <% end %>
   <div class="table-responsive my-1">
     <table class="table table-sm">
       <thead class="thead-dark">
