--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
 <div class=".navbar-expand-sm">
   <nav class="navbar navbar-expand-lg navbar-dark">
-    <%= link_to 'Hráči', players_path, class: 'navbar-brand' %>
+    <%= link_to 'Zápasy', matches_path, class: 'navbar-brand' %>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -8,10 +8,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <%= link_to 'Zápasy', matches_path, class: 'nav-link'  %>
+          <%= link_to 'Rebríček', rankings_path, class: 'nav-link'  %>
         </li>
         <li class="nav-item">
-          <%= link_to 'Rebríček', rankings_path, class: 'nav-link'  %>
+          <%= link_to 'Hráči', players_path, class: 'nav-link'  %>
         </li>
         <li class="nav-item">
           <%= link_to 'O súťaži', pages_about_path, class: 'nav-link'  %>
