Round progress indication

--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -12,7 +12,7 @@
   </div>
 </div>
 
-<%= round_range_info(@round) if @round.present? %>
+<%= round_progress_info(@round) if @round.present? %>
 
 <p class="text-center">
   <% if @season && @round && policy(Match).create? %>
