--- a/app/views/rankings/index.html.erb
+++ b/app/views/rankings/index.html.erb
@@ -11,7 +11,7 @@
   </div>
 </div>
 
-<%= round_range_info(@round) if @round.present? %>
+<%= round_progress_info(@round) if @round.present? %>
 
 <% if @rankings.any? %>
   <% if @last_update_time.present? %>
