--- a/app/views/matches/_table.html.erb
+++ b/app/views/matches/_table.html.erb
@@ -16,25 +16,7 @@
       <tbody>
         <% matches.each do |match| %>
           <% next if !user_signed_in? && (match.player1.dummy? || match.player2.dummy?) %>
-          <tr>
-            <td>
-              <%= match.player1.name %><br>
-              <small>
-                <i><%= link_to "#{match.player1.phone}", "tel:#{match.player1.phone}" %></i>
-              </small>
-            </td>
-            <td>
-              <%= match.player2.name %><br>
-              <small>
-                <i><%= link_to "#{match.player2.phone}", "tel:#{match.player2.phone}" %></i>
-              </small>
-            </td>
-            <td><%= match.note %></td>
-            <td><%= MatchDecorator.new(match).score %></td>
-            <td>
-              <%= link_to 'Detail', match_path(match), class: 'btn btn-sm btn-success' %>
-            </td>
-          </tr>
+          <%= match_table_row(match) %>
         <% end %>
       </tbody>
     </table>
