--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -1,7 +1,8 @@
 <div class="row">
   <div class="col">
     <p class="lead float-left">
-      Zoznam zápasov (<%= @matches_count %>) |
+      Zoznam zápasov (<%= @matches_count %>)
+      <%= '|' if @round.present? %>
       <%= round_element(@round, current_user) %>
     </p>
     <% if @season && @round %>
