Added table info text

--- a/app/views/matches/_table.html.erb
+++ b/app/views/matches/_table.html.erb
@@ -21,6 +21,14 @@
       </tbody>
     </table>
   </div>
+  <p class="text-center">
+    <i>
+      <small>
+        <span class="bg-green text-nowrap px-2 py-1">odohratý zápas</span>
+        <span class="bg-yellow text-nowrap px-2 py-1">odohratý dnes, alebo včera</span>
+      </small>
+    </i>
+  </p>
 <% else %>
   <div class="row">
     <div class="col">
