Added swissper gem

--- a/app/views/rounds/show.html.erb
+++ b/app/views/rounds/show.html.erb
@@ -4,6 +4,7 @@
     <div class="float-right">
       <%= link_to 'Upraviť', edit_round_path(@round), class: 'btn btn-success my-1' %>
       <%= link_to 'Naspäť', rounds_path, class: 'btn btn-outline-success my-1' %>
+      <%= link_to 'Žreb', '#', class: 'btn btn-danger my-1' %>
     </div>
   </div>
 </div>
