Changed footer info

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -39,4 +39,11 @@
       </div>
     </div>
   </div>
+  <div class="row">
+    <div class="col">
+      <p class="text-center font-italic font-weight-light">
+        <small>(za obsah webu zodpovedá prevádzkovateľ súťaže)</small>
+      </p>
+    </div>
+  </div>
 </footer>
