Changed footer info

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -42,7 +42,7 @@
   <div class="row">
     <div class="col">
       <p class="text-center font-italic font-weight-light">
-        <small>(za obsah webu zodpovedá prevádzkovateľ súťaže)</small>
+        <small>(obsah webu upravuje organizátor súťaže)</small>
       </p>
     </div>
   </div>
