--- a/app/views/matches/show.html.erb
+++ b/app/views/matches/show.html.erb
@@ -39,12 +39,12 @@
 <p class="lead text-center"><%= round_element(@match.round, current_user) %></p>
 <hr>
 <p class="lead text-center">
-  <%= @match.player1.name %>
+  <%= link_to @match.player1.name, player_path(@match.player1) %>
   <i>(tel.č. <%= link_to "#{@match.player1.phone}", "tel:#{@match.player1.phone}" %>)</i>
   <b>zabezpečuje <i>kurt</i></b>.
 </p>
 <p class="lead text-center">
-  <%= @match.player2.name %>
+  <%= link_to @match.player2.name, player_path(@match.player2) %>
   <i>(tel.č. <%= link_to "#{@match.player2.phone}", "tel:#{@match.player2.phone}" %>)</i>
   <b>zabezpečuje <i>lopty</i></b>.
 </p>
