Added test cases, refactored matches tossing

--- a/app/views/rankings/index.html.erb
+++ b/app/views/rankings/index.html.erb
@@ -32,7 +32,9 @@
             <th scope="col">Body pre žreb</th>
           <% end %>
           <th scope="col">Body súperov</th>
-          <th></th>
+          <% if user_signed_in? %>
+            <th></th>
+          <% end %>
         </tr>
       </thead>
       <tbody>
