--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -30,7 +30,7 @@
       Termín a miesto zápasu je najlepšie dohodnúť čím skôr po vyžrebovaní každého hracieho kola.
       <b>Po dohodnutí zápasu môžu hráči informovať organizátora o mieste a čase dohodnutého zápasu, aby boli tieto informácie verejné pre ostatných (SMS na č. <%= link_to ' 0911-503-355', 'tel:0911503355' %>).</b>
       Oficiálnymi loptami súťaže sú DUNLOP FORT, WILSON AO, HEAD ATP. Iné lopty možno použiť len so súhlasom súpera.
-      <p class="text-center"><button class="btn btn-success btn-sm" type="button" data-toggle="collapse" data-target="#match-instructions" aria-expanded="false" aria-controls="match-instructions">Ok</button></p>
+      <p class="text-center"><button class="btn btn-success btn-sm mt-3" type="button" data-toggle="collapse" data-target="#match-instructions" aria-expanded="false" aria-controls="match-instructions">Ok</button></p>
       <p class="text-center"><%= link_to 'viac info', pages_about_path, class: 'text-center' %></p>
     </small>
   </div>
