Double confirm button

--- a/app/assets/stylesheets/general.scss
+++ b/app/assets/stylesheets/general.scss
@@ -47,6 +47,10 @@ p.lead .bagge-pill-wider {
   border-radius: 0.3rem;
 }
 
+.span-dbl-confirm {
+  display: none;
+}
+
 //
 // Tables
 
@@ -83,11 +87,11 @@ p.lead .bagge-pill-wider {
 // Colors
 
 .bg-green {
-  background-color: #8cf38636; // grey #abc1aa36
+  background-color: #e2fce6;
 }
 
 .bg-yellow {
-  background-color: #ecc13f3b;
+  background-color: #fbf0cf;
 }
 
 //
