--- a/app/views/matches/_list_admin.html.erb
+++ b/app/views/matches/_list_admin.html.erb
@@ -20,9 +20,7 @@
         <%= render 'matches/table', matches: draft_matches %>
         <% if draft_matches.any? %>
           <p class="text-center">
-            <button id="publish-all-matches-btn" class="btn btn-sm btn-success">Zverejniť všetky!</button>
-            <%= link_to 'Potvrdiť!', publish_all_matches_round_path(@round), id: 'publish-all-matches-link', class: 'btn btn-sm btn-outline-danger', style: 'display: none;' %>
-            <%= render 'matches/scripts_index' %>
+            <%= double_confirm_button('Zverejniť všetky!', publish_all_matches_round_path(@round), 'btn btn-sm btn-success') %>
           </p>
         <% end %>
       </div>
