--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -2,22 +2,22 @@
   <div class="col">
     <p class="lead float-left">
       Zoznam zápasov (<%= @matches_count %>)
-      <%= '|' if @round.present? %>
-      <%= round_element(@round, current_user) %>
+      <%= '|' if selected_round.present? %>
+      <%= round_element(selected_round, current_user) %>
     </p>
-    <% if @season && @round %>
+    <% if selected_season && selected_round %>
       <div class="form-group float-right">
-        <%= select_tag :round_id, options_from_collection_for_select(@season.rounds.default, "id", "full_label", @round.id), class: 'form-control reloading-page', data: { url: request.path, param_name: 'round' } %>
+        <%= select_tag :round_id, options_from_collection_for_select(selected_season.rounds.default, "id", "full_label", selected_round.id), class: 'form-control reloading-page', data: { url: request.path, param_name: 'round' } %>
       </div>
     <% end %>
   </div>
 </div>
 
-<%= round_progress_info(@round) if @round.present? %>
+<%= round_progress_info(selected_round) if selected_round.present? %>
 
 <p class="text-center">
-  <% if @season && @round && policy(Match).create? %>
-    <%= link_to 'Nový zápas', new_match_path(round_id: @round.id), class: 'btn btn-sm btn-success' %>
+  <% if selected_season && selected_round && policy(Match).create? %>
+    <%= link_to 'Nový zápas', new_match_path(round_id: selected_round.id), class: 'btn btn-sm btn-success' %>
   <% end %>
 
   <button class="btn btn-success btn-sm" type="button" data-toggle="collapse" data-target="#match-instructions" aria-expanded="false" aria-controls="match-instructions">
@@ -37,7 +37,7 @@
 </div>
 
 <% if user_signed_in? %>
-  <%= render 'list_admin', published_matches: @published_matches, draft_matches: @draft_matches %>
+  <%= render 'list_admin', published_matches: @published_matches, draft_matches: @draft_matches, round: selected_round %>
 <% else %>
   <%= render 'list_public', matches: @published_matches %>
 <% end %>
