--- a/app/views/rankings/index.html.erb
+++ b/app/views/rankings/index.html.erb
@@ -1,17 +1,17 @@
 <div class="row">
   <div class="col">
     <p class="lead float-left">
-      <%= ["Poradie hráčov", @round&.full_label].compact.join(' | ') %>
+      <%= ["Poradie hráčov", selected_round&.full_label].compact.join(' | ') %>
     </p>
-    <% if @season && @round %>
+    <% if selected_season && selected_round %>
       <div class="form-group float-right">
-        <%= select_tag :round_id, options_from_collection_for_select(@season.rounds.default, "id", "full_label", @round.id), class: 'form-control reloading-page', data: { url: request.path, param_name: 'round' } %>
+        <%= select_tag :round_id, options_from_collection_for_select(selected_season.rounds.default, "id", "full_label", selected_round.id), class: 'form-control reloading-page', data: { url: request.path, param_name: 'round' } %>
       </div>
     <% end %>
   </div>
 </div>
 
-<%= round_progress_info(@round) if @round.present? %>
+<%= round_progress_info(selected_round) if selected_round.present? %>
 
 <% if @rankings.any? %>
   <% if @last_update_time.present? %>
