Added player category into rankings page

--- a/app/views/rankings/index.html.erb
+++ b/app/views/rankings/index.html.erb
@@ -27,6 +27,7 @@
         <tr>
           <th></th>
           <th scope="col">Meno</th>
+          <th scope="col">Kategória</th>
           <th scope="col">Body</th>
           <% if user_signed_in? %>
             <th scope="col">Body pre žreb</th>
