--- a/app/views/rankings/index.html.erb
+++ b/app/views/rankings/index.html.erb
@@ -33,9 +33,12 @@
             <th scope="col">Body pre žreb</th>
           <% end %>
           <th scope="col">
-            Body súperov
-            <span data-toggle="tooltip" data-placement="left", title="Súčet bodov tých hráčov, s ktorými má hráč odohratý zápas v tejto sezóne vrátane tohto kola">
-              <%= fa_icon 'question-circle' %>
+            Body
+            <span class="text-nowrap">
+              súperov
+              <span data-toggle="tooltip" data-placement="left", title="Súčet bodov tých hráčov, s ktorými má hráč odohratý zápas v tejto sezóne vrátane tohto kola">
+                <%= fa_icon 'question-circle' %>
+              </span>
             </span>
           </th>
           <% if user_signed_in? %>
