--- a/app/views/players/show.html.erb
+++ b/app/views/players/show.html.erb
@@ -5,7 +5,7 @@
       <% if user_signed_in? %>
         <%= link_to 'Upraviť', edit_player_path(@player), class: 'btn btn-success my-1' %>
       <% end %>
-      <%= link_to 'Naspäť', players_path, class: 'btn btn-outline-success my-1' %>
+      <%= link_to 'Všetci hráči', players_path, class: 'btn btn-outline-success my-1' %>
     </div>
   </div>
 </div>
