--- a/app/views/rankings/index.html.erb
+++ b/app/views/rankings/index.html.erb
@@ -13,6 +13,10 @@
 
 <%= round_progress_info(selected_round) if selected_round.present? %>
 
+<% if @most_recent_article.present? %>
+  <div class="mb-4"><%= render 'articles/tile', article: @most_recent_article %></div>
+<% end %>
+
 <% if @rankings.any? %>
   <% if @last_update_time.present? %>
     <i>
