--- a/app/views/rounds/show.html.erb
+++ b/app/views/rounds/show.html.erb
@@ -3,7 +3,7 @@
     <h1 class="float-left"><%= @round.full_label %></h1>
     <div class="float-right">
       <%= link_to 'Upraviť', edit_round_path(@round), class: 'btn btn-success my-1' %>
-      <%= link_to 'Naspäť', rounds_path, class: 'btn btn-outline-success my-1' %>
+      <%= link_to 'Všetky kolá', rounds_path, class: 'btn btn-outline-success my-1' %>
     </div>
   </div>
 </div>
