--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,6 +11,9 @@
           <%= link_to 'Rebríček', rankings_path, class: 'nav-link'  %>
         </li>
         <li class="nav-item">
+          <%= link_to 'Novinky', articles_path, class: 'nav-link'  %>
+        </li>
+        <li class="nav-item">
           <%= link_to 'Hráči', players_path, class: 'nav-link'  %>
         </li>
         <li class="nav-item">
