--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,2 +1,9 @@
-<h1>Articles#edit</h1>
-<p>Find me in app/views/articles/edit.html.erb</p>
+<div class="row">
+  <div class="col-md-3 hidden-sm-down"></div>
+  <div class="col">
+    <h2><%= @heading %></h2>
+    <hr>
+    <%= render 'form', article: @article %>
+  </div>
+  <div class="col-md-3 hidden-sm-down"></div>
+</div>
