--- a/app/views/matches/show.html.erb
+++ b/app/views/matches/show.html.erb
@@ -66,7 +66,7 @@
 <% if user_signed_in? %>
   <hr>
   <p class="lead text-center">
-    <%= published_pill(@match) %>
+    <%= match_published_pill(@match) %>
   </p>
   <% if @match.from_toss? %>
     <p class="lead text-center"><small><i>Zápas vznikol automatickým žrebovaním.</i></small></p>
