--- a/app/views/matches/_list_admin.html.erb
+++ b/app/views/matches/_list_admin.html.erb
@@ -3,22 +3,22 @@
     <ul class="nav nav-tabs" id="tab-matches" role="tablist">
       <li class="nav-item">
         <a class="nav-link active" id="published-tab" data-toggle="tab" href="#published" role="tab" aria-controls="published" aria-selected="true">
-          Zverejnené <span class="badge badge-light"><%= published_matches.size %></span>
+          Zverejnené <span class="badge badge-light"><%= matches.published.size %></span>
         </a>
       </li>
       <li class="nav-item">
         <a class="nav-link" id="draft-tab" data-toggle="tab" href="#draft" role="tab" aria-controls="draft" aria-selected="false">
-          Nezverejnené <span class="badge badge-light"><%= draft_matches.size %></span>
+          Nezverejnené <span class="badge badge-light"><%= matches.draft.size %></span>
         </a>
       </li>
     </ul>
     <div class="tab-content" id="tab-matches-content">
       <div class="tab-pane fade show active" id="published" role="tabpanel" aria-labelledby="published-tab">
-        <%= render 'matches/table', matches: published_matches %>
+        <%= render 'matches/table', matches: matches.published %>
       </div>
       <div class="tab-pane fade" id="draft" role="tabpanel" aria-labelledby="draft-tab">
-        <%= render 'matches/table', matches: draft_matches %>
-        <% if draft_matches.any? %>
+        <%= render 'matches/table', matches: matches.draft %>
+        <% if matches.draft.any? %>
           <p class="text-center">
             <%= double_confirm_button('Zverejniť všetky!', publish_all_matches_round_path(round), 'btn btn-sm btn-success') %>
           </p>
