Added pinning of articles

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -2,6 +2,7 @@
   <div class="float-right">
     <%= link_to 'Všetky novinky', articles_path, class: 'btn btn-outline-success my-1' %>
     <% if user_signed_in? %>
+      <%= link_to 'Vyvesiť', pin_article_path(@article), class: 'btn btn-outline-success my-1' %>
       <%= link_to 'Upraviť', edit_article_path(@article), class: 'btn btn-success my-1' %>
       <%= link_to 'Vymazať', article_path(@article), method: :delete, data: { confirm: "Naozaj vymazať?" }, class: 'btn btn-danger my-1' %>
     <% end %>
