--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,9 @@
   </head>
 
   <body>
+    <% unless @payment_balance.nil? %>
+      <%= render 'payments/payment_balance' %>
+    <% end %>
     <%= render 'shared/navbar' %>
     <div class="img-banner mb-2"></div>
     <div class="container-fluid">
